--- a/nov9/BankingApp/src/main/webapp/css/style.css
+++ b/nov9/BankingApp/src/main/webapp/css/style.css
@@ -3,12 +3,10 @@
 body {
 	background-color: #c8d8e4;
 }
-.main h1{
-	text-align:center;
-}
 
 h1, h2 {
-	padding-left: 10px; text-align : left;
+	padding-left: 4%;
+	text-align: left;
 	color: black;
 	text-align: left;
 }
@@ -22,24 +20,36 @@ input[readonly] {
 	cursor: not-allowed;
 }
 
-.main label, .main input, .main textarea ,.main select{
+sup{
+	margin-left:6px;
+}
+
+.main label, .main input, .main textarea, .main select {
 	color: navy;
 	font-size: 25px;
 	display: inline-block;
 	width: 400px;
 	text-align: center;
+	border: none;
 }
 
-.main select{
+.main input{
+	background-color:#c8d8e4;
+	border-bottom:2px solid red;
 	font-size:20px;
-	width:409px;
-	padding:10px;
+}
+
+.main select {
+	background-color:#c8d8e4;
+	font-size: 20px;
+	width: 409px;
+	border-bottom:2px solid red;
 }
 
 .main label {
 	color: black;
 	text-align: left;
-	width: 300px;
+	width: 250px;
 }
 
 .login {
@@ -61,27 +71,33 @@ input[readonly] {
 }
 
 .login button {
-	border-radius: 20px;
+	margin-top: 10px;
 	width: 300px;
 	height: 45px;
 	font-size: 20px;
-	background-color: #8600ff;
+	background-color: #2b6777;
 	color: white;
+	border-radius: 20px;
 }
 
 .login input {
+	outline:none;
+	background-color:white;
 	font-size: 30px;
 	color: blue;
 	margin-bottom: .6em;
 	height: 40px;
 	width: 300px;
-	box-sizing: border-box;
 	border: none;
 	border-bottom: 2px solid red;
 }
 
+.login button:hover {
+	background-color: white;
+}
+
 table {
-	margin-left:6%;
+	margin-left: 6%;
 	margin-top: 1em;
 	width: 88%;
 	border-collapse: collapse;
@@ -107,7 +123,7 @@ th {
 }
 
 td {
-	padding:10px;
+	padding: 10px;
 	color: #000000;
 	font-size: 24px;
 }
@@ -119,7 +135,7 @@ td {
 	padding: 15px 32px;
 	text-align: center;
 	text-decoration: none;
-	font-size: 30px;
+	font-size: 25px;
 	width: 100%;
 	color: white;
 	border-radius: 20px;
@@ -142,7 +158,7 @@ td {
 }
 
 .menuDropField button {
-	font-size: 30px;
+	font-size: 25px;
 	text-align: center;
 	width: 100%;
 	height: 60px;
@@ -180,18 +196,50 @@ td {
 	color: red;
 }
 
-.align {
-	margin-left: 20%;
-	margin-top: 12%; text-align : center;
-	height: 250px;
-	justify-content: space-between;
-	flex-direction: column;
-	width: 55%;
-	text-align: center;
+.card {
+	border-radius:28px;
+	box-sizing:border-box;
+	box-shadow: 2px 20px 20px grey;
+	width:50%;
+	height:38%;
+	margin-left:25%;
+	margin-top:10%;
+	margin-bottom:10%;
+	background-color:#2b6777;
 }
 
-.align div {
+.card div {
 	padding-top: 5px;
+	display:flex;
+	flex-direction: column;
+}
+.card label{
+	margin-left:3.5%;
+	padding:20px;
+	font-size:25px;
+	color: white;
+}
+.card input,.card select,.card textarea{
+	text-align:center;
+	font-size:24px;
+	margin-left:6%;
+	background-color:#2b6777;
+	border:none;
+	border-bottom:2px solid white;
+	width:86%;
+	outline:none;
+	color: white;	
+}
+
+.card button{
+	font-size:25px;
+	border-radius:20px;
+	margin-left:30%;
+	width:40%;
+	height:40px;
+	margin-top:2%;
+	margin-bottom:8%;
+	background-color:#F5FFFA;
 }
 
 iframe {
@@ -199,9 +247,7 @@ iframe {
 	height: 100vh;
 }
 
-.sameline {
-	display: flex;
-}
+
 
 .right {
 	float: right;
@@ -209,7 +255,7 @@ iframe {
 
 .logout {
 	overflow: hidden;
-	background-color: #9DC88D;
+	background-color: #216c81;
 }
 
 .logout h1 {
@@ -220,7 +266,7 @@ iframe {
 .headerMenu {
 	padding: 15px;
 	margin-right: 10px;
-	float : right;
+	float: right;
 	margin-top: 8px;
 	overflow: hidden;
 	float: right;
@@ -242,7 +288,7 @@ iframe {
 	width: 100%;
 	height: 60px;
 	background-color: #2b6777;
-	color: navy;
+	color:white;
 	font-size: 20px;
 }
 
@@ -259,18 +305,39 @@ iframe {
 .verticalAlign {
 	justify-content: space-evenly;
 }
-
-.verticalAlign button {
-	margin-bottom: 40px;
+.verticalAlign button{
+	font-size:25px;
+	border-radius:20px;
+	width:20%;
+	height:40px;
+	background-color:#F5FFFA;
 }
-
-.verticalAlign label {
-	margin-right: 2px;
+.sameline {
+	margin-left:2%;
+	display: grid;
+	grid-template-columns: 25% 25% 25% 25%;
+	grid-template-rows:10%;
 }
-
+.sameline input,.sameline select,.sameline label{
+	text-align:center;
+	font-size:24px;
+	background-color:#2b6777;
+	border:none;
+	border-bottom:2px solid white;
+	width:60%;
+	outline:none;
+	color: white;
+}
+.sameline button{
+	font-size:24px;
+	border-radius:20px;
+	width:40%;
+	height:34px;
+	background-color:#F5FFFA;
+}
 .transaction {
 	display: grid;
-	grid-template-columns: auto auto auto auto auto auto;
+	grid-template-columns: 30% 35%;
 	grid-template-rows: 50px;
 	grid-gap: 10px;
 }
@@ -283,6 +350,6 @@ iframe {
 }
 
 .transaction button {
-	background-color: #8600ff;
+	background-color: #2b6777;
 	color: white;
 }
